--- a/index.html
+++ b/index.html
@@ -17,8 +17,23 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
 <style>
+
 body {
 	padding-top: 5rem;
+	background-color: #d7ccc8;
+	color: #3e2723;
+	display: flex;
+	min-height: 100vh;
+	flex-direction: column;
+	font-size: 20px;
+}
+
+main {
+	flex: 1 0 auto;
+}
+
+nav.navbar{
+	background-color: rgba(20,20,20,0.75)
 }
 </style>
 
@@ -29,7 +44,7 @@ body {
 
 <body>
 
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top">
 	<a class="navbar-brand" href="">天道老貓</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
@@ -45,7 +60,19 @@ body {
 </nav>
 
 <main role="main" class="container">
-	<h1>首頁</h1>
+
+<pre>
+問自己
+
+我是活得越來越輕鬆？
+
+還是活得越來越累？
+
+我該做什麼？才能讓自己活得越來越輕鬆！
+
+我不該做什麼？才不會讓自己活得越來越累！
+</pre>
+
 </main>
 
 <!-- Optional JavaScript -->
